RabbitMQServices.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
  type: ClusterIP
